# chat

./: .gitignore  CONTRIBUTING.md  README.md
dis/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dis/load-tests/: baseline.js  broadcast_flood.js  setup.js  soak.js  spike.js  tune.sh  watch.sh
dis/migrations/: 20240101000001_create_tables.sql  20240101000002_social_features.sql  20240101000003_perf_indexes.sql  20240101000004_users_search_index.sql
dis/src/: errors.rs  main.rs  retry.rs
dis/src/config/: mod.rs
dis/src/db/: mod.rs
dis/src/delivery/: dedup.rs
dis/src/handlers/: auth_handler.rs  channel_handler.rs  message_handler.rs  mod.rs  presence_handler.rs  social_handler.rs
dis/src/kafka/: consumer.rs  producer.rs
dis/src/middleware/: auth.rs
dis/src/models/: channel.rs  message.rs  mod.rs  social.rs  user.rs
dis/src/notification/: service.rs
dis/src/presence/: service.rs
dis/src/redis/: pool.rs
dis/src/routes/: mod.rs
dis/src/services/: auth_service.rs  channel_service.rs  message_service.rs  mod.rs  social_service.rs
dis/src/services/social/: discover.rs  friends.rs  invites.rs  join_requests.rs  members.rs  mod.rs
dis/src/ws/: connection.rs  handler.rs  manager.rs  mod.rs  protocol.rs  redis_pubsub.rs
discord-app/: README.md  package-lock.json  package.json
discord-app/discord/: README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
discord-app/discord-web/: Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
(+40 files in other folders)
