[package]
name = "dis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum          = { version = "0.7", features = ["macros", "ws"] }
tower-http    = { version = "0.5", features = ["cors", "trace"] }
tokio         = { version = "1",   features = ["full"] }

# WebSocket / async streams
futures-util = "0.3"
dashmap      = "5"

# Redis — version must match what deadpool-redis 0.16 re-exports (0.26)
redis         = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.16" }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2       = "0.5"

# Utilities
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror   = "1"
anyhow      = "1"
async-trait = "0.1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
